Default integration data is set while clear

--- a/templates/test_toggle/content.html
+++ b/templates/test_toggle/content.html
@@ -1,14 +1,18 @@
 {% set integration_name = 'reporter_engagement' %}
 {% set display_name = 'Engagement' %}
 
-
 <Test-Integration-Item
+        instance_name="{{ integration_name }}"
         integration_name="{{ integration_name }}"
         display_name="{{ display_name }}"
         :project_integrations="{{ project_integrations }}"
 >
     <template #selector="{selected_integration, is_selected}">
-        <div class="security_integration_item" data-name="reporter_engagement"></div>
+        <div class="security_integration_item" 
+            data-name="reporter_engagement"
+            :data-selected-integration="selected_integration"
+        >
+        </div>
     </template>
 </Test-Integration-Item>
 
